--- a/css/styles.css
+++ b/css/styles.css
@@ -51,10 +51,13 @@ select
     height: 35px;
     background-color:bisque;
     color: #8a97a0;
+    transition: 0.3s;
+    opacity: 0.6;
+   
 }
 input::placeholder
 {
-    opacity: 0.7;
+    opacity: 0.6;
     text-align:right;
     font-size:17px;
     font-style: italic;
@@ -89,6 +92,8 @@ label {
   textarea:focus
   {
         border-color:navy;
+        opacity: 1;
+       
   }
   input,
   textarea  {
@@ -120,12 +125,15 @@ button{
     padding: 15px 5px;
     border:1px solid white;
     border-radius: 5px;
+    transition: 0.3s;
+    opacity: 0.6;
 }
 button:hover
 {
-   
+    opacity: 1;
     color: bisque;
     cursor: pointer;
+   
 }
 footer p{
     text-align: center;
